# rayomd

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.bat  main.cpp  optimization_progress.md  optimization_research_notes.md  tester.md  todo.md  todo_part2.md  todo_v3.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  hygiene.yml  performance.yml  release.yml
docs/: benchmark_smoke.md  brand_asset_prompt.md
docs/benchmarks/: commercial_benchmark_summary.md  markdown_pdf_speed_comparison_2026-07-11.md  markdown_pdf_speed_comparison_2026-07-13.md  optimization_2.2.0_2026-07-13.md  pandoc_comparison_2026-06-18.md  reversible_pdf_features_2026-07-13.md
docs/benchmarks/releases/: README.md
docs/benchmarks/releases/v1.1.1/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v1.1.2/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v1.1.4/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v1.1.5/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v1.1.6/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v1.1.7/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v2.0.0/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v2.0.1/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v2.1.0/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v2.2.0/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v2.3.0/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/releases/v2.5.0/: linux-wsl-release-local-quick-modern-normal-local.json  windows-release-local-quick-modern-normal-local.json
docs/benchmarks/versions/: README.md
docs/benchmarks/versions/v1.1.0/: linux-wsl-release-quick-modern-normal-local.json
docs/benchmarks/versions/v1.1.3/: linux-wsl-release-quick-modern-normal-local.json
docs/development/: arbitrary_pdf_research_decision.md  issue20_completion_matrix.md  optimization_progress.md  optimization_research.md  performance.md  reversible_pdf_profile.md
docs/optimization/: progress.md  research_notes.md
include/fast_markdown/: tiny_pdf.h
include/rayomd/: tiny_pdf.h
scripts/: archive_release_benchmarks.py  capture_windows_profile.ps1  commercial_benchmark.py  commercial_linux_ext4.sh  compare_markdown_pdf_tools.py  compare_pandoc.py  concurrency_benchmark.py  fresh_process_ab.py  markdown_feature_benchmark.py  markdown_feature_io_benchmark.py  md_to_pdf_runner.cjs  perf_watch.py  perf_watch_both.ps1  reversible_pdf_benchmark.py  simdutf_large_unicode_ext4.sh  stress_benchmark.py  stress_ext4_benchmark.sh  train_pgo.py  verify-linux.sh
src/cli/: main_cli.cpp
src/common/: profiling.cpp  profiling.h  text_utils.cpp  text_utils.h
src/core/: export_options.cpp  export_options.h  inline_markdown.cpp  inline_markdown.h  markdown_parser.cpp  markdown_parser.h  rayomd_pdf_source.cpp  rayomd_pdf_source.h  tiny_pdf.cpp
src/win32/: delay_image_import_pointers.cpp  delay_image_load.cpp  delay_import_pointers.cpp  delay_load.cpp  fast_markdown.rc  main_win32.cpp  rayomd.rc
tests/: core_tests.cpp  verify_cli.py
tools/: benchmark.py
